<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/gameLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/gamePage"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentPayerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/currentPlayerLabel"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameLogo" />

    <TextView
        android:id="@+id/currentPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/currentPlayerName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toEndOf="@+id/currentPayerLabel"
        app:layout_constraintTop_toBottomOf="@+id/gameLogo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="364dp"
        android:layout_height="387dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPayerLabel">

        <Button
            android:id="@+id/button_0_0"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="24dp"
            android:onClick="playButton_0_0"
            android:text="@string/button_0_0"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_0_1"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="24dp"
            android:onClick="playButton_0_1"
            android:text="@string/button_0_1"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintStart_toEndOf="@+id/button_0_0"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_0_2"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:onClick="playButton_0_2"
            android:text="@string/button_0_2"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_0_1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_1_0"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="24dp"
            android:onClick="playButton_1_0"
            android:text="@string/button_1_0"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_0_0" />

        <Button
            android:id="@+id/button_1_1"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="24dp"
            android:onClick="playButton_1_1"
            android:text="@string/button_1_1"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.177"
            app:layout_constraintStart_toEndOf="@+id/button_1_0"
            app:layout_constraintTop_toBottomOf="@+id/button_0_1" />

        <Button
            android:id="@+id/button_1_2"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="24dp"
            android:onClick="playButton_1_2"
            android:text="@string/button_1_2"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toEndOf="@+id/button_1_1"
            app:layout_constraintTop_toBottomOf="@+id/button_0_2" />

        <Button
            android:id="@+id/button_2_0"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="24dp"
            android:onClick="playButton_2_0"
            android:text="@string/button_2_0"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_1_0" />

        <Button
            android:id="@+id/button_2_1"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="24dp"
            android:onClick="playButton_2_1"
            android:text="@string/button_2_1"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.177"
            app:layout_constraintStart_toEndOf="@+id/button_2_0"
            app:layout_constraintTop_toBottomOf="@+id/button_1_1" />

        <Button
            android:id="@+id/button_2_2"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="24dp"
            android:onClick="playButton_2_2"
            android:text="@string/button_2_2"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toEndOf="@+id/button_2_1"
            app:layout_constraintTop_toBottomOf="@+id/button_1_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>